--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 * {
   box-sizing: border-box;
+  font-family: Roboto Condensed;
 }
 
 body {
   margin: 0;
   background: linear-gradient(90deg, #0c164d 0%, #190b22 100%);
+  /* VARFÖR SATTE JAG DET HÄR?? */
   height: 100vh;
-  /* kanske inte ska va på bodyn, vi får se */
+  /* Tror det här borde va med: */
   /* overflow: hidden; */
 }
 
@@ -20,6 +22,43 @@ header {
   align-items: center;
   padding-top: 80px;
   padding-right: 70px;
+  position: relative;
+}
+
+.search-form {
+  /* Se över stylingen här */
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-input {
+  font-size: 1rem;
+  height: 2.5rem;
+  width: 12rem;
+  padding: 0.5rem;
+  border-radius: 3px 0 0 3px;
+  border: none;
+}
+
+.search-button {
+  font-size: 1rem;
+  font-weight: 500;
+  width: 4rem;
+  height: 2.5rem;
+  border: none;
+  border-radius: 0 3px 3px 0;
+  cursor: pointer;
+  background-color: #ffc800;
+
+  &:hover {
+    background-color: #ffdc5f;
+  }
+}
+
+.heading-container {
+  text-align: end;
 }
 
 .main-heading {
@@ -42,7 +81,6 @@ header {
   line-height: 1;
   letter-spacing: 0.6em;
   margin: 30px 0;
-  /* text-align: end; */
 }
 
 main {
@@ -52,6 +90,8 @@ main {
   align-items: center;
   justify-content: space-between;
   padding: 0 70px 0 0;
+  /* FUSK! som funkar bra på planet.html men inte index.html*/
+  height: 100vh;
 }
 
 /* Planets start */
@@ -165,6 +205,8 @@ hr {
   font-weight: 300;
   line-height: 31px;
   color: #ffffff;
+  /* ??? */
+  /* word-break: break-word; */
 }
 
 .planet-sub-heading {
