--- a/style.css
+++ b/style.css
@@ -18,11 +18,10 @@ body {
 
 header {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
-  padding-top: 80px;
-  padding-right: 70px;
-  position: relative;
+  padding: 80px 70px 0 70px;
+  /* position: relative; */
 }
 
 .search-form {
@@ -36,7 +35,7 @@ header {
 .search-input {
   font-size: 1rem;
   height: 2.5rem;
-  width: 12rem;
+  width: 16rem;
   padding: 0.5rem;
   border-radius: 3px 0 0 3px;
   border: none;
