--- a/style.css
+++ b/style.css
@@ -12,10 +12,6 @@ body {
   /* overflow: hidden; */
 }
 
-.temp {
-  background-color: yellow;
-}
-
 header {
   display: flex;
   justify-content: space-between;
@@ -204,8 +200,6 @@ hr {
   font-weight: 300;
   line-height: 31px;
   color: #ffffff;
-  /* ??? */
-  /* word-break: break-word; */
 }
 
 .planet-sub-heading {
@@ -227,4 +221,58 @@ hr {
 footer {
   text-align: right;
   color: #ffffff;
+}
+
+.planet {
+  width: 370px;
+  height: 740px;
+  border-radius: 0 740px 740px 0;
+}
+
+.sun-big {
+  background: #ffd029;
+  box-shadow: 0px 0px 250px 0px #ffd02933;
+}
+
+.mercury-big {
+  background-color: #888888;
+}
+
+.venus-big {
+  background-color: #e7cdcd;
+}
+
+.earth-big {
+  background-color: #428ed4;
+  box-shadow: 0 0 0 50px #428ed41a, 0 0 0 100px #428ed40f;
+}
+
+.mars-big {
+  background-color: #ef5f5f;
+}
+
+.jupiter-big {
+  background: #e29468;
+}
+
+.saturn-big {
+  background-color: #c7aa72;
+  position: relative;
+}
+
+.saturn-big-ring {
+  background-color: #ffffff66;
+  width: 1066px;
+  height: 16px;
+  border-radius: 100%;
+  position: absolute;
+  left: -533px;
+}
+
+.uranus-big {
+  background-color: #c9d4f1;
+}
+
+.neptune-big {
+  background-color: #7a91a7;
 }
